--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Bienvenido a este Blog</h1>
-    <p>Este parrafo es nuevo</p>
+    
+    <div id="container">
+        <div id="post">
+            <h1>Este es un titulo atractivo e interesante</h1>
+            <p> Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        </div>
+    </div>
 </body>
 </html>
