--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,10 @@
     
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hiperblog
+            <span id="tagline">
+                Tu blog de confianza
+            </span>
         </div>
         <div id="post">
             <h1>Este es un titulo atractivo e interesante</h1>
