--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
         <div id="cabecera">
             Hiperblog
             <span id="tagline">
-                Tu blog de confianza
+                Mi blog de cabecera
             </span>
         </div>
         <div id="post">
