--- a/blogpost.html
+++ b/blogpost.html
@@ -13,13 +13,14 @@
         <div id="cabecera">
             Hiperblog
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog maestro
             </span>
         </div>
         <div id="post">
             <h1>Este es un titulo atractivo e interesante</h1>
             <p> Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Muchos mas que ir a conferencias o salir en Youtube</p>
+            <p>Suscribete y dale Like</p>
         </div>
     </div>
 </body>
